<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDescription"/>

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDate"
        android:focusable="false"/>

    <EditText
        android:id="@+id/inputStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startTime"
        android:focusable="false"/>

    <EditText
        android:id="@+id/inputEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endTime"
        android:focusable="false"/>

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventLocation"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn"/>
</LinearLayout>
