<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_event"
            android:textSize="30sp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/inputTitle"
            android:hint="@string/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputDescription"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputDate"
            android:hint="@string/select_date"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputStartTime"
            android:hint="@string/start_time"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputEndTime"
            android:hint="@string/end_time"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/inputType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputLocation"
            android:hint="@string/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</ScrollView>